--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Primer Git</h1>
+    <h2>juego en el segundo dia</h2>
+    <p>probandi diferentes cosas</p>
 </body>
 </html>
