--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Primer Git</h1>
     <h2>juego en el segundo dia</h2>
-    <p>probandi diferentes cosas</p>
+    <h5>Juego yo tambien ahora</h5>
 </body>
 </html>
